--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LifeLike - Social Media</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script> 
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #1f1f1f;
+            padding: 15px;
+            text-align: center;
+        }
+        button {
+            background-color: #333;
+            color: #ffffff;
+            border: none;
+            padding: 10px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #555;
+        }
+        #auth-container {
+            background-color: #1f1f1f;
+            padding: 20px;
+            text-align: center;
+            border-radius: 5px;
+            width: 300px;
+            margin: auto;
+        }
+        input {
+            background-color: #333;
+            color: #ffffff;
+            border: 1px solid #444;
+            padding: 10px;
+            margin: 5px;
+            width: calc(100% - 20px);
+        }
+        aside {
+            background-color: #1f1f1f;
+            color: #ffffff;
+            padding: 15px;
+            width: 250px;
+            position: fixed;
+            top: 0;
+            right: 0;
+            height: 100%;
+            overflow-y: auto;
+            box-shadow: -3px 0 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease-in-out;
+            transform: translateX(100%);
+        }
+        aside.show {
+            transform: translateX(0);
+        }
+        a {
+            color: #4caf50;
+            text-decoration: none;
+            display: block;
+            padding: 10px 0;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .profile img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to LifeLike 2</h1>
+        <button onclick="toggleSidebar()">☰ Open Sidebar</button>
+        <nav>
+            <button onclick="login()">Log In</button>
+            <button onclick="signup()">Sign Up</button>
+            <button onclick="alert('Chatrooms coming soon!')">Chatrooms</button>
+            <button onclick="alert('Go Live feature coming soon!')">Go Live Now</button>
+            <button onclick="alert('About Page coming soon!')">About</button>
+            <a href="https://digitalcpu.github.io/Cyclonex/argentix.html">
+                <button>Earn Argentix</button>
+            </a>
+        </nav>
+    </header>
 
+    <div id="auth-container">
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="password" placeholder="Password">
+        <button onclick="signup()">Sign Up</button>
+        <button onclick="login()">Log In</button>
+    </div>
+
+    <aside id="sidebar">
+        <button onclick="toggleSidebar()">❌ Close Sidebar</button>
+        <div class="profile">
+            <img id="profile-pic" src="default-avatar.png" alt="Profile Picture">
+            <button onclick="uploadProfilePicture()">Upload Profile Picture</button>
+            <h3 id="username-display">Not logged in</h3>
+        </div>
+
+        <h4>Add a Friend</h4>
+        <input type="text" id="friend-email" placeholder="Friend's Email">
+        <button onclick="addFriend()">Add Friend</button>
+
+        <h4>Friends</h4>
+        <div id="friends-list"></div>
+
+        <h4>Followers</h4>
+        <div id="followers-list"></div>
+
+        <a href="#">Inbox</a>
+        <a href="#">Profile Settings</a>
+        <a href="#">Hardware Settings</a>
+
+        <button id="logout-btn" onclick="logout()">Log Out</button>
+    </aside>
+
+    <script type="module" src="script.js" defer></script>
+    <script>
+        function toggleSidebar() {
+            document.getElementById("sidebar").classList.toggle("show");
+        }
+    </script>
+</body>
+</html>
