--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LifeLike - Social Media</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script> 
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <style>
         body {
             background-color: #121212;
@@ -15,6 +15,7 @@
             padding: 0;
         }
         header {
+            margin-bottom: 30px;
             background-color: #1f1f1f;
             padding: 15px;
             text-align: center;
@@ -30,108 +31,99 @@
         button:hover {
             background-color: #555;
         }
-        #auth-container {
+        #auth-container, #blank-container, #info-container {
             background-color: #1f1f1f;
             padding: 20px;
             text-align: center;
             border-radius: 5px;
             width: 300px;
-            margin: auto;
+            margin: 20px auto;
         }
-        input {
-            background-color: #333;
-            color: #ffffff;
-            border: 1px solid #444;
-            padding: 10px;
-            margin: 5px;
-            width: calc(100% - 20px);
-        }
-        aside {
-            background-color: #1f1f1f;
-            color: #ffffff;
-            padding: 15px;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            right: 0;
-            height: 100%;
+        #blank-container {
+            height: 200px;
             overflow-y: auto;
-            box-shadow: -3px 0 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-in-out;
-            transform: translateX(100%);
-        }
-        aside.show {
-            transform: translateX(0);
-        }
-        a {
-            color: #4caf50;
-            text-decoration: none;
-            display: block;
-            padding: 10px 0;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .profile img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            object-fit: cover;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to LifeLike 2</h1>
-        <button onclick="toggleSidebar()">☰ Open Sidebar</button>
-        <nav>
-            <button onclick="login()">Log In</button>
-            <button onclick="signup()">Sign Up</button>
-            <button onclick="alert('Chatrooms coming soon!')">Chatrooms</button>
-            <button onclick="alert('Go Live feature coming soon!')">Go Live Now</button>
-            <button onclick="alert('About Page coming soon!')">About</button>
-            <a href="https://digitalcpu.github.io/Cyclonex/argentix.html">
-                <button>Earn Argentix</button>
-            </a>
-        </nav>
+        <h1>Welcome to LifeLike</h1>
+        <button onclick="toggleSidebar()" style="margin-right: 15px;">☰ Open Sidebar</button>
     </header>
 
+    <div id="blank-container"></div>
+
     <div id="auth-container">
-        <input type="email" id="email" placeholder="Email">
+        <h2 id="auth-title">Log In</h2>
+        <input type="text" id="login-identifier" placeholder="Email or Username">
         <input type="password" id="password" placeholder="Password">
-        <button onclick="signup()">Sign Up</button>
-        <button onclick="login()">Log In</button>
+        <p id="auth-toggle" onclick="toggleAuthMode()">Don't have an account? Sign up</p>
+        <button onclick="handleAuth()">Log In</button>
     </div>
 
-    <aside id="sidebar">
-        <button onclick="toggleSidebar()">❌ Close Sidebar</button>
-        <div class="profile">
-            <img id="profile-pic" src="default-avatar.png" alt="Profile Picture">
-            <button onclick="uploadProfilePicture()">Upload Profile Picture</button>
-            <h3 id="username-display">Not logged in</h3>
-        </div>
+    <div id="info-container" style="display: flex; justify-content: space-between; align-items: center; gap: 10px;">
+        <button style="flex: 1; max-width: 130px; height: 40px;" onclick="showAboutInfo()">About</button>
+        <a href="https://digitalcpu.github.io/Cyclonex/argentix.html" style="flex: 1; max-width: 130px;">
+            <button style="width: 100%; height: 40px;">Earn Argentix</button>
+        </a>
+    </div>
 
-        <h4>Add a Friend</h4>
-        <input type="text" id="friend-email" placeholder="Friend's Email">
-        <button onclick="addFriend()">Add Friend</button>
-
-        <h4>Friends</h4>
-        <div id="friends-list"></div>
-
-        <h4>Followers</h4>
-        <div id="followers-list"></div>
-
-        <a href="#">Inbox</a>
-        <a href="#">Profile Settings</a>
-        <a href="#">Hardware Settings</a>
-
-        <button id="logout-btn" onclick="logout()">Log Out</button>
-    </aside>
-
-    <script type="module" src="script.js" defer></script>
     <script>
         function toggleSidebar() {
-            document.getElementById("sidebar").classList.toggle("show");
+            let sidebar = document.getElementById("sidebar");
+            if (!sidebar) {
+                sidebar = document.createElement("aside");
+                sidebar.id = "sidebar";
+                sidebar.style.position = "fixed";
+                sidebar.style.top = "0";
+                sidebar.style.right = "0";
+                sidebar.style.width = "250px";
+                sidebar.style.height = "100%";
+                sidebar.style.backgroundColor = "#1f1f1f";
+                sidebar.style.boxShadow = "-3px 0 10px rgba(0, 0, 0, 0.3)";
+                sidebar.style.padding = "15px";
+                sidebar.style.overflowY = "auto";
+                sidebar.style.transform = "translateX(100%)";
+                sidebar.style.transition = "transform 0.3s ease-in-out";
+                sidebar.innerHTML = `
+                    <button onclick="toggleSidebar()" style="display: block; width: 100%; margin-bottom: 10px;">❌ Close Sidebar</button>
+                    <div class="profile">
+                        <img id="profile-pic" src="default-avatar.png" alt="Profile Picture" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+                        <button onclick="uploadProfilePicture()">Upload Profile Picture</button>
+                        <h3 id="username-display">Not logged in</h3>
+                    </div>
+                    <h4>Add a Friend</h4>
+                    <input type="text" id="friend-email" placeholder="Friend's Email" style="width: 100%; margin-bottom: 10px;">
+                    <button onclick="addFriend()">Add Friend</button>
+                    <h4>Friends</h4>
+                    <div id="friends-list"></div>
+                    <h4>Followers</h4>
+                    <div id="followers-list"></div>
+                    <a href="#">Inbox</a>
+                    <a href="#">Profile Settings</a>
+                    <a href="#">Hardware Settings</a>
+                    <button id="logout-btn" onclick="logout()" style="width: 100%; margin-top: 10px;">Log Out</button>
+                `;
+                document.body.appendChild(sidebar);
+            }
+            sidebar.style.transform = sidebar.style.transform === "translateX(0px)" ? "translateX(100%)" : "translateX(0px)";
+        }
+
+        function showAboutInfo() {
+            document.getElementById("blank-container").innerHTML = `
+                <h3>LifeLike is an AGX-powered live-streaming social network where authenticity takes center stage.</h3>
+                <p>Built to encourage real-time engagement, LifeLike provides a unique decentralized ecosystem that rewards users for going live and ensures diverse, unbiased content distribution.</p>
+                <h4>Core Features & Structure</h4>
+                <ul>
+                    <li><strong>Live Streaming as the Core Experience:</strong> No traditional posts, reinforcing a decentralized economy.</li>
+                    <li><strong>Friends, Followers & Messaging:</strong> Mutual connections and private messaging.</li>
+                    <li><strong>Open Chat & Message Board:</strong> Public chatroom and announcement board.</li>
+                    <li><strong>Decentralized Monetization & AGX Economy:</strong> Earn AGX for engagement.</li>
+                    <li><strong>Content Diversity & Anti-Algorithm Bias:</strong> Fair content distribution without favoritism.</li>
+                    <li><strong>Themed Streaming Modes:</strong> Categories like Educational, Sports, News, Gaming, and more.</li>
+                    <li><strong>The Push for Transparency & Real-Time Engagement:</strong> Encouraging real-time interactions over staged content.</li>
+                </ul>
+                <p>Join LifeLike, where every moment is real.</p>`;
         }
     </script>
 </body>
